Fixed two Test cases for YoutubeServiceTest, updated Javadocs comments for YoutubeService, StatisticsService, SearchService and all their tests